testsuite/tests/properties/invalid_prop_def/not_type.lkt
import common

class BarNode: FooNode {
    @export fun prop(a: node): Int = 0
}
